✨ feat: Add Hotkey Helper Panel

--- a/locales/ar/providers.json
+++ b/locales/ar/providers.json
@@ -146,6 +146,9 @@
   "xai": {
     "description": "xAI هي شركة تكرّس جهودها لبناء الذكاء الاصطناعي لتسريع الاكتشافات العلمية البشرية. مهمتنا هي تعزيز فهمنا المشترك للكون."
   },
+  "xinference": {
+    "description": "Xorbits Inference (Xinference) هو منصة مفتوحة المصدر تهدف إلى تبسيط تشغيل وتكامل نماذج الذكاء الاصطناعي المختلفة. بفضل Xinference، يمكنك تشغيل الاستدلال باستخدام أي نموذج LLM مفتوح المصدر، أو نماذج التضمين، أو النماذج متعددة الوسائط في بيئات سحابية أو محلية، وإنشاء تطبيقات ذكاء اصطناعي قوية."
+  },
   "zeroone": {
     "description": "01.AI تركز على تقنيات الذكاء الاصطناعي في عصر الذكاء الاصطناعي 2.0، وتعزز الابتكار والتطبيقات \"الإنسان + الذكاء الاصطناعي\"، باستخدام نماذج قوية وتقنيات ذكاء اصطناعي متقدمة لتعزيز إنتاجية البشر وتحقيق تمكين التكنولوجيا."
   },
