--- a/locales/ar/setting.json
+++ b/locales/ar/setting.json
@@ -46,8 +46,7 @@
     "conflicts": "يتعارض مع اختصارات لوحة المفاتيح الحالية",
     "group": {
       "conversation": "المحادثة",
-      "layout": "التخطيط",
-      "system": "النظام"
+      "essential": "أساسي"
     },
     "invalidCombination": "يجب أن تحتوي اختصارات لوحة المفاتيح على مفتاح تعديل واحد على الأقل (Ctrl، Alt، Shift) ومفتاح عادي واحد",
     "record": "اضغط على المفتاح لتسجيل اختصار لوحة المفاتيح",
