--- a/locales/bg-BG/hotkey.json
+++ b/locales/bg-BG/hotkey.json
@@ -8,7 +8,12 @@
     "title": "Редактиране на съобщение"
   },
   "openChatSettings": {
+    "desc": "Прегледайте и променете настройките на текущия разговор",
     "title": "Отворете настройките на чата"
+  },
+  "openHotkeyHelper": {
+    "desc": "Прегледайте инструкциите за използване на всички клавишни комбинации",
+    "title": "Отворете помощта за клавишни комбинации"
   },
   "regenerateMessage": {
     "desc": "Прегенерирайте последното съобщение",
@@ -19,6 +24,7 @@
     "title": "Създаване на нова тема"
   },
   "search": {
+    "desc": "Активирайте основното поле за търсене на текущата страница",
     "title": "Търсене"
   },
   "switchAgent": {
@@ -26,12 +32,15 @@
     "title": "Бърза смяна на помощника"
   },
   "toggleLeftPanel": {
+    "desc": "Показване или скриване на панела с помощ отляво",
     "title": "Показване/скриване на панела с помощника"
   },
   "toggleRightPanel": {
+    "desc": "Показване или скриване на панела с теми отдясно",
     "title": "Показване/скриване на панела с теми"
   },
   "toggleZenMode": {
+    "desc": "В режим на фокус, показвайте само текущия разговор, скривайки другия интерфейс",
     "title": "Превключване на режим на фокус"
   }
 }
