--- a/locales/bg-BG/setting.json
+++ b/locales/bg-BG/setting.json
@@ -46,8 +46,7 @@
     "conflicts": "Конфликт с текущите клавишни комбинации",
     "group": {
       "conversation": "Разговор",
-      "layout": "Оформление",
-      "system": "Система"
+      "essential": "Основен"
     },
     "invalidCombination": "Клавишната комбинация трябва да съдържа поне един модификатор (Ctrl, Alt, Shift) и един обикновен клавиш",
     "record": "Натиснете клавиш, за да запишете клавишна комбинация",
