--- a/locales/de-DE/setting.json
+++ b/locales/de-DE/setting.json
@@ -46,8 +46,7 @@
     "conflicts": "Konflikte mit bestehenden Tastenkombinationen",
     "group": {
       "conversation": "Gespräch",
-      "layout": "Layout",
-      "system": "System"
+      "essential": "Grundlegend"
     },
     "invalidCombination": "Die Tastenkombination muss mindestens einen Modifikatortaste (Strg, Alt, Umschalt) und eine normale Taste enthalten",
     "record": "Drücken Sie eine Taste, um die Tastenkombination aufzuzeichnen",
