--- a/locales/en-US/setting.json
+++ b/locales/en-US/setting.json
@@ -46,8 +46,7 @@
     "conflicts": "Conflicts with existing hotkeys",
     "group": {
       "conversation": "Conversation",
-      "layout": "Layout",
-      "system": "System"
+      "essential": "Essential"
     },
     "invalidCombination": "The hotkey must include at least one modifier key (Ctrl, Alt, Shift) and one regular key",
     "record": "Press a key to record the hotkey",
