--- a/locales/fa-IR/providers.json
+++ b/locales/fa-IR/providers.json
@@ -146,6 +146,9 @@
   "xai": {
     "description": "xAI یک شرکت است که به ساخت هوش مصنوعی برای تسریع کشفیات علمی بشر اختصاص دارد. مأموریت ما پیشبرد درک مشترک ما از جهان است."
   },
+  "xinference": {
+    "description": "Xorbits Inference (Xinference) یک پلتفرم متن باز است که برای ساده‌سازی اجرای مدل‌های مختلف هوش مصنوعی و ادغام آن‌ها طراحی شده است. با استفاده از Xinference، می‌توانید از هر مدل LLM متن باز، مدل‌های جاسازی و مدل‌های چندرسانه‌ای در محیط‌های ابری یا محلی برای انجام استنتاج استفاده کنید و برنامه‌های هوش مصنوعی قدرتمندی ایجاد کنید."
+  },
   "zeroone": {
     "description": "صفر و یک متعهد به پیشبرد انقلاب فناوری AI 2.0 با محوریت انسان است و هدف آن ایجاد ارزش اقتصادی و اجتماعی عظیم از طریق مدل‌های زبانی بزرگ و همچنین ایجاد اکوسیستم جدید هوش مصنوعی و مدل‌های تجاری است."
   },
