--- a/locales/fa-IR/setting.json
+++ b/locales/fa-IR/setting.json
@@ -46,8 +46,7 @@
     "conflicts": "تداخل با کلیدهای میانبر موجود",
     "group": {
       "conversation": "گفتگو",
-      "layout": "چیدمان",
-      "system": "سیستم"
+      "essential": "اساسی"
     },
     "invalidCombination": "کلیدهای میانبر باید حداقل شامل یک کلید اصلاحی (Ctrl, Alt, Shift) و یک کلید معمولی باشند",
     "record": "برای ضبط کلید میانبر، کلید را فشار دهید",
