--- a/locales/ja-JP/hotkey.json
+++ b/locales/ja-JP/hotkey.json
@@ -8,7 +8,12 @@
     "title": "メッセージを編集"
   },
   "openChatSettings": {
+    "desc": "現在の会話の設定を表示および変更する",
     "title": "チャット設定を開く"
+  },
+  "openHotkeyHelper": {
+    "desc": "すべてのショートカットキーの使用説明を表示する",
+    "title": "ショートカットヘルプを開く"
   },
   "regenerateMessage": {
     "desc": "最後のメッセージを再生成します",
@@ -19,6 +24,7 @@
     "title": "新しいトピックを開始"
   },
   "search": {
+    "desc": "現在のページの主要な検索ボックスを呼び出す",
     "title": "検索"
   },
   "switchAgent": {
@@ -26,12 +32,15 @@
     "title": "アシスタントを素早く切り替え"
   },
   "toggleLeftPanel": {
+    "desc": "左側のアシスタントパネルを表示または非表示にする",
     "title": "アシスタントパネルを表示/非表示"
   },
   "toggleRightPanel": {
+    "desc": "右側のトピックパネルを表示または非表示にする",
     "title": "トピックパネルを表示/非表示"
   },
   "toggleZenMode": {
+    "desc": "集中モードでは、現在の会話のみを表示し、他のUIを隠す",
     "title": "集中モードを切り替え"
   }
 }
