--- a/locales/pl-PL/setting.json
+++ b/locales/pl-PL/setting.json
@@ -46,8 +46,7 @@
     "conflicts": "Kolizja z istniejącymi skrótami klawiszowymi",
     "group": {
       "conversation": "Rozmowa",
-      "layout": "Układ",
-      "system": "System"
+      "essential": "Podstawowy"
     },
     "invalidCombination": "Skrót klawiszowy musi zawierać przynajmniej jeden klawisz modyfikujący (Ctrl, Alt, Shift) oraz jeden klawisz zwykły",
     "record": "Naciśnij klawisz, aby nagrać skrót klawiszowy",
