--- a/locales/pt-BR/setting.json
+++ b/locales/pt-BR/setting.json
@@ -46,8 +46,7 @@
     "conflicts": "Conflito com teclas de atalho existentes",
     "group": {
       "conversation": "Conversa",
-      "layout": "Layout",
-      "system": "Sistema"
+      "essential": "Essencial"
     },
     "invalidCombination": "A combinação de teclas de atalho deve incluir pelo menos uma tecla modificadora (Ctrl, Alt, Shift) e uma tecla comum",
     "record": "Pressione a tecla para gravar o atalho",
