--- a/locales/ru-RU/hotkey.json
+++ b/locales/ru-RU/hotkey.json
@@ -8,7 +8,12 @@
     "title": "Редактировать сообщение"
   },
   "openChatSettings": {
+    "desc": "Просмотреть и изменить настройки текущего чата",
     "title": "Открыть настройки чата"
+  },
+  "openHotkeyHelper": {
+    "desc": "Просмотреть инструкции по использованию всех горячих клавиш",
+    "title": "Открыть справку по горячим клавишам"
   },
   "regenerateMessage": {
     "desc": "Сгенерировать последнее сообщение заново",
@@ -19,6 +24,7 @@
     "title": "Начать новую тему"
   },
   "search": {
+    "desc": "Вызвать основное поле поиска на текущей странице",
     "title": "Поиск"
   },
   "switchAgent": {
@@ -26,12 +32,15 @@
     "title": "Быстрое переключение помощника"
   },
   "toggleLeftPanel": {
+    "desc": "Показать или скрыть панель помощника слева",
     "title": "Показать/Скрыть панель помощника"
   },
   "toggleRightPanel": {
+    "desc": "Показать или скрыть панель тем справа",
     "title": "Показать/Скрыть панель тем"
   },
   "toggleZenMode": {
+    "desc": "В режиме концентрации отображается только текущий чат, скрывая другие элементы интерфейса",
     "title": "Переключить режим концентрации"
   }
 }
