--- a/locales/ru-RU/setting.json
+++ b/locales/ru-RU/setting.json
@@ -46,8 +46,7 @@
     "conflicts": "Конфликт с существующими горячими клавишами",
     "group": {
       "conversation": "Беседа",
-      "layout": "Макет",
-      "system": "Система"
+      "essential": "Основной"
     },
     "invalidCombination": "Горячая клавиша должна содержать как минимум одну модификаторную клавишу (Ctrl, Alt, Shift) и одну обычную клавишу",
     "record": "Нажмите клавишу для записи горячей клавиши",
