--- a/locales/zh-CN/setting.json
+++ b/locales/zh-CN/setting.json
@@ -46,8 +46,7 @@
     "conflicts": "与现有快捷键冲突",
     "group": {
       "conversation": "会话",
-      "layout": "布局",
-      "system": "系统"
+      "essential": "基础"
     },
     "invalidCombination": "快捷键需要至少包含一个修饰键 (Ctrl, Alt, Shift) 和一个常规键",
     "record": "按下按键以录制快捷键",
