--- a/locales/ar/hotkey.json
+++ b/locales/ar/hotkey.json
@@ -8,7 +8,12 @@
     "title": "تحرير الرسالة"
   },
   "openChatSettings": {
+    "desc": "عرض وتعديل إعدادات المحادثة الحالية",
     "title": "فتح إعدادات المحادثة"
+  },
+  "openHotkeyHelper": {
+    "desc": "عرض جميع تعليمات استخدام الاختصارات",
+    "title": "فتح مساعدة الاختصارات"
   },
   "regenerateMessage": {
     "desc": "إعادة توليد آخر رسالة",
@@ -19,6 +24,7 @@
     "title": "فتح موضوع جديد"
   },
   "search": {
+    "desc": "استدعاء مربع البحث الرئيسي في الصفحة الحالية",
     "title": "بحث"
   },
   "switchAgent": {
@@ -26,12 +32,15 @@
     "title": "تبديل المساعد بسرعة"
   },
   "toggleLeftPanel": {
+    "desc": "عرض أو إخفاء لوحة المساعد على اليسار",
     "title": "عرض/إخفاء لوحة المساعد"
   },
   "toggleRightPanel": {
+    "desc": "عرض أو إخفاء لوحة المواضيع على اليمين",
     "title": "عرض/إخفاء لوحة الموضوع"
   },
   "toggleZenMode": {
+    "desc": "في وضع التركيز، عرض المحادثة الحالية فقط، وإخفاء واجهة المستخدم الأخرى",
     "title": "تبديل وضع التركيز"
   }
 }
