--- a/locales/bg-BG/providers.json
+++ b/locales/bg-BG/providers.json
@@ -146,6 +146,9 @@
   "xai": {
     "description": "xAI е компания, която се стреми да изгражда изкуствен интелект за ускоряване на човешките научни открития. Нашата мисия е да насърчаваме общото ни разбиране за вселената."
   },
+  "xinference": {
+    "description": "Xorbits Inference (Xinference) е отворена платформа, предназначена да опрости изпълнението и интеграцията на различни AI модели. С помощта на Xinference можете да изпълнявате инференции в облака или локална среда, използвайки всякакви отворени LLM, модели за вграждане и мултимодални модели, и да създавате мощни AI приложения."
+  },
   "zeroone": {
     "description": "01.AI се фокусира върху технологии за изкуствен интелект от ерата на AI 2.0, активно насърчавайки иновации и приложения на \"човек + изкуствен интелект\", използвайки мощни модели и напреднали AI технологии за повишаване на производителността на човека и реализиране на технологично овластяване."
   },
