--- a/locales/es-ES/setting.json
+++ b/locales/es-ES/setting.json
@@ -46,8 +46,7 @@
     "conflicts": "Conflicto con las teclas de acceso rápido existentes",
     "group": {
       "conversation": "Conversación",
-      "layout": "Diseño",
-      "system": "Sistema"
+      "essential": "Esencial"
     },
     "invalidCombination": "La combinación de teclas de acceso rápido debe incluir al menos una tecla modificadora (Ctrl, Alt, Shift) y una tecla normal",
     "record": "Presiona una tecla para grabar la tecla de acceso rápido",
