--- a/locales/fa-IR/hotkey.json
+++ b/locales/fa-IR/hotkey.json
@@ -8,7 +8,12 @@
     "title": "ویرایش پیام"
   },
   "openChatSettings": {
+    "desc": "مشاهده و ویرایش تنظیمات کنونی گفتگو",
     "title": "باز کردن تنظیمات گفتگو"
+  },
+  "openHotkeyHelper": {
+    "desc": "مشاهده تمام توضیحات استفاده از کلیدهای میانبر",
+    "title": "باز کردن راهنمای کلیدهای میانبر"
   },
   "regenerateMessage": {
     "desc": "آخرین پیام را دوباره تولید کنید",
@@ -19,6 +24,7 @@
     "title": "باز کردن موضوع جدید"
   },
   "search": {
+    "desc": "فعال کردن جعبه جستجوی اصلی صفحه کنونی",
     "title": "جستجو"
   },
   "switchAgent": {
@@ -26,12 +32,15 @@
     "title": "تغییر سریع دستیار"
   },
   "toggleLeftPanel": {
+    "desc": "نمایش یا پنهان کردن پنل دستیار سمت چپ",
     "title": "نمایش/پنهان کردن پنل دستیار"
   },
   "toggleRightPanel": {
+    "desc": "نمایش یا پنهان کردن پنل موضوعات سمت راست",
     "title": "نمایش/پنهان کردن پنل موضوع"
   },
   "toggleZenMode": {
+    "desc": "در حالت تمرکز، فقط گفتگو کنونی نمایش داده می‌شود و سایر رابط‌های کاربری پنهان می‌شوند",
     "title": "تغییر حالت تمرکز"
   }
 }
