--- a/locales/it-IT/hotkey.json
+++ b/locales/it-IT/hotkey.json
@@ -8,7 +8,12 @@
     "title": "Modifica messaggio"
   },
   "openChatSettings": {
+    "desc": "Visualizza e modifica le impostazioni della conversazione attuale",
     "title": "Apri impostazioni chat"
+  },
+  "openHotkeyHelper": {
+    "desc": "Visualizza le istruzioni per l'uso di tutte le scorciatoie da tastiera",
+    "title": "Apri aiuto scorciatoie"
   },
   "regenerateMessage": {
     "desc": "Rigenera l'ultimo messaggio",
@@ -19,6 +24,7 @@
     "title": "Inizia un nuovo argomento"
   },
   "search": {
+    "desc": "Attiva la barra di ricerca principale della pagina corrente",
     "title": "Cerca"
   },
   "switchAgent": {
@@ -26,12 +32,15 @@
     "title": "Cambia assistente rapidamente"
   },
   "toggleLeftPanel": {
+    "desc": "Mostra o nascondi il pannello assistente a sinistra",
     "title": "Mostra/Nascondi pannello assistente"
   },
   "toggleRightPanel": {
+    "desc": "Mostra o nascondi il pannello argomenti a destra",
     "title": "Mostra/Nascondi pannello argomenti"
   },
   "toggleZenMode": {
+    "desc": "In modalità concentrazione, mostra solo la conversazione attuale, nascondendo altre interfacce",
     "title": "Attiva/disattiva modalità di concentrazione"
   }
 }
