--- a/locales/it-IT/setting.json
+++ b/locales/it-IT/setting.json
@@ -46,8 +46,7 @@
     "conflicts": "In conflitto con i tasti di scelta rapida esistenti",
     "group": {
       "conversation": "Conversazione",
-      "layout": "Layout",
-      "system": "Sistema"
+      "essential": "Essenziale"
     },
     "invalidCombination": "La combinazione di tasti deve contenere almeno un tasto modificatore (Ctrl, Alt, Shift) e un tasto normale",
     "record": "Premi un tasto per registrare la scorciatoia",
