--- a/locales/ja-JP/providers.json
+++ b/locales/ja-JP/providers.json
@@ -146,6 +146,9 @@
   "xai": {
     "description": "xAIは、人類の科学的発見を加速するための人工知能を構築することに専念している企業です。私たちの使命は、宇宙に対する共通の理解を促進することです。"
   },
+  "xinference": {
+    "description": "Xorbits Inference (Xinference) は、さまざまな AI モデルの実行と統合を簡素化するためのオープンソースプラットフォームです。Xinference を使用すると、任意のオープンソース LLM、埋め込みモデル、およびマルチモーダルモデルをクラウドまたはローカル環境で実行し、強力な AI アプリケーションを作成できます。"
+  },
   "zeroone": {
     "description": "01.AIは、AI 2.0時代の人工知能技術に特化し、「人+人工知能」の革新と応用を推進し、超強力なモデルと先進的なAI技術を用いて人類の生産性を向上させ、技術の力を実現します。"
   },
