--- a/locales/ko-KR/hotkey.json
+++ b/locales/ko-KR/hotkey.json
@@ -8,7 +8,12 @@
     "title": "메시지 편집"
   },
   "openChatSettings": {
+    "desc": "현재 대화의 설정을 확인하고 수정합니다.",
     "title": "채팅 설정 열기"
+  },
+  "openHotkeyHelper": {
+    "desc": "모든 단축키 사용 설명을 확인합니다.",
+    "title": "단축키 도움말 열기"
   },
   "regenerateMessage": {
     "desc": "마지막 메시지를 다시 생성합니다",
@@ -19,6 +24,7 @@
     "title": "새 주제 시작"
   },
   "search": {
+    "desc": "현재 페이지의 주요 검색 상자를 호출합니다.",
     "title": "검색"
   },
   "switchAgent": {
@@ -26,12 +32,15 @@
     "title": "도우미 빠른 전환"
   },
   "toggleLeftPanel": {
+    "desc": "왼쪽 도우미 패널을 표시하거나 숨깁니다.",
     "title": "도우미 패널 표시/숨기기"
   },
   "toggleRightPanel": {
+    "desc": "오른쪽 주제 패널을 표시하거나 숨깁니다.",
     "title": "주제 패널 표시/숨기기"
   },
   "toggleZenMode": {
+    "desc": "집중 모드에서는 현재 대화만 표시하고 다른 UI를 숨깁니다.",
     "title": "집중 모드 전환"
   }
 }
