--- a/locales/nl-NL/providers.json
+++ b/locales/nl-NL/providers.json
@@ -146,6 +146,9 @@
   "xai": {
     "description": "xAI is ein bedrijf dat zich richt op het bouwen van kunstmatige intelligentie om menselijke wetenschappelijke ontdekkingen te versnellen. Onze missie is om onze gezamenlijke begrip van het universum te bevorderen."
   },
+  "xinference": {
+    "description": "Xorbits Inference (Xinference) is een open-source platform dat het uitvoeren en integreren van verschillende AI-modellen vereenvoudigt. Met Xinference kunt u inferentie uitvoeren met elk open-source LLM, inbeddingsmodel en multimodaal model in de cloud of in een lokale omgeving, en krachtige AI-toepassingen creëren."
+  },
   "zeroone": {
     "description": "01.AI richt zich op kunstmatige intelligentietechnologie in het tijdperk van AI 2.0, en bevordert sterk de innovatie en toepassing van 'mens + kunstmatige intelligentie', met behulp van krachtige modellen en geavanceerde AI-technologie om de productiviteit van de mens te verbeteren en technologische capaciteiten te realiseren."
   },
