--- a/locales/ru-RU/providers.json
+++ b/locales/ru-RU/providers.json
@@ -146,6 +146,9 @@
   "xai": {
     "description": "xAI — это компания, занимающаяся разработкой искусственного интеллекта для ускорения научных открытий человечества. Наша миссия — способствовать общему пониманию Вселенной."
   },
+  "xinference": {
+    "description": "Xorbits Inference (Xinference) — это открытая платформа, предназначенная для упрощения работы и интеграции различных AI моделей. С помощью Xinference вы можете выполнять выводы с использованием любых открытых LLM, моделей встраивания и мультимодальных моделей как в облачной, так и в локальной среде, а также создавать мощные AI приложения."
+  },
   "zeroone": {
     "description": "01.AI сосредоточен на технологиях искусственного интеллекта 2.0, активно продвигая инновации и применение \"человек + искусственный интеллект\", используя мощные модели и передовые AI-технологии для повышения производительности человека и реализации технологического потенциала."
   },
