--- a/locales/tr-TR/hotkey.json
+++ b/locales/tr-TR/hotkey.json
@@ -8,7 +8,12 @@
     "title": "Mesajı düzenle"
   },
   "openChatSettings": {
+    "desc": "Mevcut oturumun ayarlarını görüntüle ve değiştir",
     "title": "Sohbet ayarlarını aç"
+  },
+  "openHotkeyHelper": {
+    "desc": "Tüm kısayol tuşlarının kullanım talimatlarını görüntüle",
+    "title": "Kısayol Yardımını Aç"
   },
   "regenerateMessage": {
     "desc": "Son mesajı yeniden oluştur",
@@ -19,6 +24,7 @@
     "title": "Yeni konu aç"
   },
   "search": {
+    "desc": "Mevcut sayfanın ana arama kutusunu aç",
     "title": "Ara"
   },
   "switchAgent": {
@@ -26,12 +32,15 @@
     "title": "Asistanı hızlıca değiştir"
   },
   "toggleLeftPanel": {
+    "desc": "Sol yan paneli göster veya gizle",
     "title": "Asistan panelini göster/gizle"
   },
   "toggleRightPanel": {
+    "desc": "Sağ konu panelini göster veya gizle",
     "title": "Konu panelini göster/gizle"
   },
   "toggleZenMode": {
+    "desc": "Odak modu, yalnızca mevcut oturumu gösterir, diğer UI'ları gizler",
     "title": "Odak modunu değiştir"
   }
 }
