--- a/locales/zh-TW/hotkey.json
+++ b/locales/zh-TW/hotkey.json
@@ -8,7 +8,12 @@
     "title": "編輯消息"
   },
   "openChatSettings": {
+    "desc": "查看和修改當前會話的設定",
     "title": "打開會話設定"
+  },
+  "openHotkeyHelper": {
+    "desc": "查看所有快捷鍵的使用說明",
+    "title": "打開快捷鍵幫助"
   },
   "regenerateMessage": {
     "desc": "重新生成最後一條消息",
@@ -19,6 +24,7 @@
     "title": "開啟新話題"
   },
   "search": {
+    "desc": "喚起當前頁面主要搜尋框",
     "title": "搜尋"
   },
   "switchAgent": {
@@ -26,12 +32,15 @@
     "title": "快捷切換助手"
   },
   "toggleLeftPanel": {
+    "desc": "顯示或隱藏左側助手面板",
     "title": "顯示/隱藏助手面板"
   },
   "toggleRightPanel": {
+    "desc": "顯示或隱藏右側話題面板",
     "title": "顯示/隱藏話題面板"
   },
   "toggleZenMode": {
+    "desc": "專注模式下，只顯示當前會話，隱藏其他 UI",
     "title": "切換專注模式"
   }
 }
