--- a/locales/zh-TW/providers.json
+++ b/locales/zh-TW/providers.json
@@ -146,6 +146,9 @@
   "xai": {
     "description": "xAI 是一家致力於構建人工智慧以加速人類科學發現的公司。我們的使命是推動我們對宇宙的共同理解。"
   },
+  "xinference": {
+    "description": "Xorbits Inference (Xinference) 是一個開源平台，用於簡化各種 AI 模型的運行和整合。藉助 Xinference，您可以使用任何開源 LLM、嵌入模型和多模態模型在雲端或本地環境中運行推理，並創建強大的 AI 應用。"
+  },
   "zeroone": {
     "description": "01.AI 專注於 AI 2.0 時代的人工智慧技術，大力推動「人+人工智慧」的創新和應用，採用超強大模型和先進 AI 技術以提升人類生產力，實現技術賦能。"
   },
